--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
   <center>
     <object>
-      <embed src="https://testrotmg/valor.swf" 
+      <embed src="https://testrotmg/Valor.swf" 
              width="800" 
              height="600" 
              pluginspace="http://www.macromedia.com/go/getflashplayer">
