--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
   <center>
     <object>
-      <embed src="https://testrotmg/swf/Valor.swf" 
+      <embed src="https://testrotmg/Valor.swf" 
              width="800" 
              height="600" 
              pluginspace="http://www.macromedia.com/go/getflashplayer">
